<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvRunnersName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/runnersName"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvRunnersTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/runnersTime"
                app:layout_constraintBottom_toBottomOf="@+id/lblAge"
                app:layout_constraintStart_toEndOf="@+id/lblTime"
                app:layout_constraintTop_toTopOf="@+id/lblAge"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvRunnersAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/runnersAge"
                app:layout_constraintBottom_toBottomOf="@+id/lblAge"
                app:layout_constraintStart_toEndOf="@+id/lblAge"
                app:layout_constraintTop_toTopOf="@+id/lblAge"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvRunnersRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/runnersRanking"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/lblRanking"
                app:layout_constraintStart_toStartOf="@+id/lblRanking"
                app:layout_constraintTop_toBottomOf="@+id/lblRanking"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/lblAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lableAge"
                app:layout_constraintStart_toStartOf="@+id/tvRunnersName"
                app:layout_constraintTop_toBottomOf="@+id/tvRunnersName" />

            <TextView
                android:id="@+id/lblTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="18sp"
                android:text="@string/lableTime"
                app:layout_constraintBottom_toBottomOf="@+id/lblAge"
                app:layout_constraintStart_toEndOf="@+id/tvRunnersAge"
                app:layout_constraintTop_toTopOf="@+id/lblAge"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/lblRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:text="@string/labelRanking"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>